# udmf

./: CHANGELOG.md  Cargo.toml  Readme.md
.github/workflows/: ci.yml  release-plz.yml
src/: error.rs  lib.rs  types.rs  uds.rs  unified_data.rs  utd.rs
tests/: udmf_tests.rs  utd_tests.rs
